fixtures/fmt/bad/bad_rename_arrow.sans
# sans 0.1
table t = from(raw) do
	rename(a b)
end
